# cpp_project_template

./: .clang-format  .clang-tidy  .clangd  .git-blame-ignore-revs  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  README.md  flake.nix  main.cpp  run_clang_tidy_and_format.sh
.github/workflows/: c-cpp.yml
cmake_modules/: zig.cmake
functions/: CMakeLists.txt  access_types.cpp  access_types.hpp  bad_std_copy.cpp  bad_std_copy.hpp  functions.cpp  functions.hpp  my_fork.cpp  my_fork.hpp  my_map.cpp  my_map.hpp  smart_pointers.cpp  smart_pointers.hpp  timing.cpp  timing.hpp  try_amdsmi.cpp  try_amdsmi.hpp  try_scandir.cpp  try_scandir.hpp  type_traits.cpp  type_traits.hpp
functions/test/: functions_test.cpp
hsa_functions/: CMakeLists.txt  my_rocprofiler.cpp  my_rocprofiler.hpp
tests/: CMakeLists.txt  functions_test.cpp
